--- a/inputedit/fprocedure/fprocedure.wxml
+++ b/inputedit/fprocedure/fprocedure.wxml
@@ -6,7 +6,7 @@
         <template is="i_{{item.t}}" data="{{...item,c:vData[item.gname],n:index}}"></template>
       </block>
     </view>
-
+    <view style="padding-bottom:100rpx;"></view>
     <view class="page__ft weui-footer_fixed-bottom" style="z-index:998;flex-direction:row;" id="{{dObjectId}}">
       <button class="weui-btn" style="display:{{enMenu=='none' && uEV ? 'inline-block' : 'none'}}" type="primary" size="mini" formType="submit" id="fSave">提交</button>
       <button class="weui-btn" style="display:{{enMenu=='none' && targetId=='0' ? 'inline-block' : 'none'}}" type="primary" size="mini" formType="submit" id="fStorage">保存</button>
