--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,4 +1,5 @@
 <import src="../../libs/weimport.wxml" />
+<import src="../../libs/wepage.wxml" />
 <view class="navigationBar" style="padding-top:{{pw.statusBar}}px;">
   <view class="navigationBar__column" style="height:{{pw.capsule}}px;">
     <template is="navBarLogo"/>
@@ -14,7 +15,8 @@
   </view>
 </view>
 <view class="page">
-  <view class="page__hd" style="padding-top:{{pw.statusBar+pw.capsule+2}}px;">
+  <template is="page_margin" data="{{...pw}}"/>
+  <view class="page__hd">
     <swiper class="swiper_box" indicator-dots="true" autoplay="{{autoplay}}">
       <block wx:for="{{images}}" wx:key="{{index}}">
         <swiper-item>
