--- a/pages/marketing/marketing.wxml
+++ b/pages/marketing/marketing.wxml
@@ -1,24 +1,12 @@
-<import src="../../libs/weimport.wxml" />
-<view wx:if="{{tiringRoom}}" class="navigationBar">
-  <view class="navigationBar__column">
-    <template is="navBarLogo"/>
-    <view class="weui-cell__bd">乐农汇的营销管理</view>
-  </view>
+<import src="../../libs/wepage.wxml" />
+<view wx:if="{{tiringRoom}}">
+  <template is="p_navBar__switchTab" data="{{...pw,navBarTitle:'乐农汇的营销管理'}}"/>
 </view>
-<view wx:else class="navigationBar">
-  <form bindsubmit="fSearch">
-    <view class="navigationBar__column">
-      <template is="navBarLogo"/>
-      <view class="navSearchBar__form">
-      <input class="navSearchBar__input" name="searchGoods" placeholder="搜索" />
-      <button class="navigationBar__btn_icon" formType="submit">
-        <icon style="margin-top:12rpx;margin-bottom:-8rpx" type="search" size="15"/>
-      </button>
-      </view>
-    </view>
-  </form>
+<view wx:else>
+  <template is="p_navBar__seach" data="{{...pw}}"/>
 </view>
 <view class="page">
+  <template is="p_marginTop" data="{{...pw}}"/>
   <view class="page__hd">
     <view wx:if="{{tiringRoom}}">
       <scroll-view class="article-scroll" scroll-y="true">
