--- a/pages/customer/customer.wxml
+++ b/pages/customer/customer.wxml
@@ -1,78 +1,79 @@
 <import src="../../libs/weimport.wxml" />
 <import src="../../libs/wepage.wxml" />
-<template is="p_navBar__switchTab" data="{{...pw,navBarTitle:tiringRoom ? '乐农汇的服务管理' : '购物车及订单管理'}}"/>
 <view class="page">
-<template is="p_marginTop" data="{{...pw}}"/>
-<view wx:if="{{tiringRoom}}">
-  <view class="page__hd">
-    <view class="page__title">近期任务</view>
-        <view class="page__title">需要回覆客户提问 X 笔</view>
-        <view class="page__desc">需要录制X篇产品介绍 X篇营销解读 X月X日直播已预约</view>
-  </view>
-  <view class="page__bd">
-    <template is="showgrids" data="{{grids}}"/>
-  </view>
-  <scroll-view scroll-y="true" class="article-scroll">
-    <view class="weui-article">
-        <view class="weui-article__section">
-          <view class="weui-article__h3">服务总结</view>
-          <view class="weui-article__p">
-              回答问题XX笔, 促成销售XX元，退换货 0 次。
-          </view>
+  <template is="p_navBar__switchTab" data="{{...pw,navBarTitle:tiringRoom ? '乐农汇的服务管理' : '购物车及订单管理'}}"/>
+  <view class="page__main">
+    <view wx:if="{{tiringRoom}}">
+      <view class="page__hd">
+        <view class="page__title">近期任务</view>
+            <view class="page__title">需要回覆客户提问 X 笔</view>
+            <view class="page__desc">需要录制X篇产品介绍 X篇营销解读 X月X日直播已预约</view>
+      </view>
+      <view class="page__bd">
+        <template is="showgrids" data="{{grids}}"/>
+      </view>
+      <scroll-view scroll-y="true" class="article-scroll">
+        <view class="weui-article">
+            <view class="weui-article__section">
+              <view class="weui-article__h3">服务总结</view>
+              <view class="weui-article__p">
+                  回答问题XX笔, 促成销售XX元，退换货 0 次。
+              </view>
+            </view>
+            <view class="weui-article__section">
+              <view class="weui-article__h3">客户分析</view>
+              <view class="weui-article__p">
+                  成交客户以中年人为主, 正面评价男性居多，负面评价无。
+              </view>
+            </view>
         </view>
-        <view class="weui-article__section">
-          <view class="weui-article__h3">客户分析</view>
-          <view class="weui-article__p">
-              成交客户以中年人为主, 正面评价男性居多，负面评价无。
-          </view>
-        </view>
+      </scroll-view>
+      <view class="weui-tab">
+        <template is="tabPanel" data="{{ tPage: mPage , pageData , pNo }}"/>
+      </view>
     </view>
-  </scroll-view>
-  <view class="weui-tab">
-    <template is="tabPanel" data="{{ tPage: mPage , pageData , pNo }}"/>
-  </view>
-</view>
-<view wx:else>
-  <view class="container carts-list">
-    <view wx:for="{{carts}}" wx:key="index" class="carts-item" bindtap="showGoods" data-object-id="{{goodsList[index].objectId}}">
-    	<!-- 复选框图标 -->
-		<icon type="{{item.selected ? 'success_circle' : 'circle'}}" size="20" catchtap="bindCheckbox" data-index="{{index}}"/>
-		<view>
-		<!-- 缩略图 -->
-		  <image class="carts-image" src="{{goodsList[index].avatar}}" mode="aspectFill"/>
-		</view>
-      <view class="carts-text">
-      	<!-- 商品标题 -->
-        <text wx:if="{{item.isgive == 0}}" class="carts-title">{{goodsList[index].title}}</text>
-        <text wx:elif="{{item.isgive == 1}}" class="carts-title">{{goodsList[index].title}}券</text>
-        <text class="carts-title">规格：{{goodsList[index].standard}}</text>
-        <view class="carts-subtitle">
-        <!-- 价格 -->
-          <text class="carts-price">{{goodsList[index].price}}</text>
-          <!-- 数量加减 -->
-          <view>
-	          <view class="stepper">
-				<!-- 减号 -->
-				<text class="{{minusStatuses[index]}}" data-index="{{index}}" catchtap="bindMinus">-</text>
-				<!-- 数值 -->
-				<input type="number" data-index="{{index}}" bindchange="bindManual" value="{{item.quantity}}" />
-				<!-- 加号 -->
-				<text class="normal" data-index="{{index}}" catchtap="bindPlus">+</text>
-			  </view>
-		  </view>
-		  <image catchtap="deleteOne" data-object-id="{{item.objectId}}" class="delete" src="../../../images/icon_delete.png" style="" mode="widthFix" />
+    <view wx:else>
+      <view class="container carts-list">
+        <view wx:for="{{carts}}" wx:key="index" class="carts-item" bindtap="showGoods" data-object-id="{{goodsList[index].objectId}}">
+        	<!-- 复选框图标 -->
+    		<icon type="{{item.selected ? 'success_circle' : 'circle'}}" size="20" catchtap="bindCheckbox" data-index="{{index}}"/>
+    		<view>
+    		<!-- 缩略图 -->
+    		  <image class="carts-image" src="{{goodsList[index].avatar}}" mode="aspectFill"/>
+    		</view>
+          <view class="carts-text">
+          	<!-- 商品标题 -->
+            <text wx:if="{{item.isgive == 0}}" class="carts-title">{{goodsList[index].title}}</text>
+            <text wx:elif="{{item.isgive == 1}}" class="carts-title">{{goodsList[index].title}}券</text>
+            <text class="carts-title">规格：{{goodsList[index].standard}}</text>
+            <view class="carts-subtitle">
+            <!-- 价格 -->
+              <text class="carts-price">{{goodsList[index].price}}</text>
+              <!-- 数量加减 -->
+              <view>
+    	          <view class="stepper">
+    				<!-- 减号 -->
+    				<text class="{{minusStatuses[index]}}" data-index="{{index}}" catchtap="bindMinus">-</text>
+    				<!-- 数值 -->
+    				<input type="number" data-index="{{index}}" bindchange="bindManual" value="{{item.quantity}}" />
+    				<!-- 加号 -->
+    				<text class="normal" data-index="{{index}}" catchtap="bindPlus">+</text>
+    			  </view>
+    		  </view>
+    		  <image catchtap="deleteOne" data-object-id="{{item.objectId}}" class="delete" src="../../../images/icon_delete.png" style="" mode="widthFix" />
+            </view>
+          </view>
         </view>
+      </view>
+      <view class="carts-footer">
+        <view class="select-and-amount" bindtap="bindSelectAll">
+          <icon type="{{selectedAllStatus ? 'success_circle' : 'circle'}}" size="18"/>
+          <text>全选</text>
+          <text>{{total}}</text>
+        </view>
+        <!-- <view class="delete" bindtap="deleteAll">删除</view> -->
+        <view class="button" bindtap="bindCheckout">生成订单</view>
       </view>
     </view>
   </view>
-  <view class="carts-footer">
-    <view class="select-and-amount" bindtap="bindSelectAll">
-      <icon type="{{selectedAllStatus ? 'success_circle' : 'circle'}}" size="18"/>
-      <text>全选</text>
-      <text>{{total}}</text>
-    </view>
-    <!-- <view class="delete" bindtap="deleteAll">删除</view> -->
-    <view class="button" bindtap="bindCheckout">生成订单</view>
-  </view>
-</view>
 </view>
