--- a/pages/marketing/marketing.wxml
+++ b/pages/marketing/marketing.wxml
@@ -1,76 +1,77 @@
 <import src="../../libs/wepage.wxml" />
 <import src="../../libs/weimport.wxml" />
-<view wx:if="{{tiringRoom}}">
-  <template is="p_navBar__switchTab" data="{{...pw,navBarTitle:'乐农汇的营销管理'}}"/>
-</view>
-<view wx:else>
-  <template is="p_navBar__seach" data="{{...pw}}"/>
-</view>
 <view class="page">
-  <template is="p_marginTop" data="{{...pw}}"/>
-  <view class="page__hd">
-    <view wx:if="{{tiringRoom}}">
-      <scroll-view class="article-scroll" scroll-y="true">
-        <view class="weui-article">
-            <view class="weui-article__section">
-              <view class="weui-article__h3">营销活动</view>
-              <view class="weui-article__p">
-                  团购XX笔, 众筹XX笔，促销XX笔。
-              </view>
-            </view>
-            <view class="weui-article__section">
-              <view class="weui-article__h3">销售分析</view>
-              <view class="weui-article__p">
-                  一个月：访问量XX，成交率X%；发红包券XX张,使用XX张。
-                  本季度：访问量XX，成交率X%；发红包券XX张,使用XX张。
-                  今年以来：访问量XX，成交率X%；发红包券XX张,使用XX张。
-              </view>
-          </view>
-        </view>
-      </scroll-view>
-    </view>
-    <view wx:else>
-      <view id="masterGroup" class="weui-grids">
-        <view wx:for="{{droneId}}" wx:key="{{index}}" wx:for-index="mNo">
-          <view class="weui-grid" hover-class="weui-grid_active" id="{{mNo}}" bindtap="f_pickMaster">
-            <image class="weui-grid__icon" src="{{master[item.masterId].thumbnail}}" />
-            <view class="weui-grid__label">{{master[item.masterId].uName}}</view>
-          </view>
-        </view>
-      </view>
-      <view wx:if="{{pMasterNo>=0}}">
-        <template is="s_h3" data="{{ p: master[droneId[pMasterNo].masterId].uName , c:master[droneId[pMasterNo].masterId].title }}"/>
-        <view id="slaveGroup" class="weui-grids">
-          <view wx:for="{{droneId[pMasterNo].slaveId}}" wx:key="{{index}}" wx:for-item="slaveId">
-            <view class="weui-grid" hover-class="weui-grid_active" id="{{slaveId}}" bindtap="f_pickSlave">
-              <image class="weui-grid__icon" src="{{slave[slaveId].thumbnail}}" />
-              <view class="weui-grid__label">{{slave[slaveId].uName}}</view>
-            </view>
-          </view>
-        </view>
-      </view>
-    </view>
+  <view wx:if="{{tiringRoom}}">
+    <template is="p_navBar__switchTab" data="{{...pw,navBarTitle:'乐农汇的营销管理'}}"/>
   </view>
-  <view class="page__bd">
-    <view wx:if="{{tiringRoom}}">
-      <template is="showgrids" data="{{grids}}"/>
-      <view class="page__title">经典推荐</view>
-      <template is="tabPanel" data="{{ tPage: goodsIndex , pageData , pNo }}"/>
+  <view wx:else>
+    <template is="p_navBar__seach" data="{{...pw}}"/>
+  </view>
+  <view class="page__main">
+    <view class="page__hd">
+      <view wx:if="{{tiringRoom}}">
+        <scroll-view class="article-scroll" scroll-y="true">
+          <view class="weui-article">
+              <view class="weui-article__section">
+                <view class="weui-article__h3">营销活动</view>
+                <view class="weui-article__p">
+                    团购XX笔, 众筹XX笔，促销XX笔。
+                </view>
+              </view>
+              <view class="weui-article__section">
+                <view class="weui-article__h3">销售分析</view>
+                <view class="weui-article__p">
+                    一个月：访问量XX，成交率X%；发红包券XX张,使用XX张。
+                    本季度：访问量XX，成交率X%；发红包券XX张,使用XX张。
+                    今年以来：访问量XX，成交率X%；发红包券XX张,使用XX张。
+                </view>
+            </view>
+          </view>
+        </scroll-view>
+      </view>
+      <view wx:else>
+        <view id="masterGroup" class="weui-grids">
+          <view wx:for="{{droneId}}" wx:key="{{index}}" wx:for-index="mNo">
+            <view class="weui-grid" hover-class="weui-grid_active" id="{{mNo}}" bindtap="f_pickMaster">
+              <image class="weui-grid__icon" src="{{master[item.masterId].thumbnail}}" />
+              <view class="weui-grid__label">{{master[item.masterId].uName}}</view>
+            </view>
+          </view>
+        </view>
+        <view wx:if="{{pMasterNo>=0}}">
+          <template is="s_h3" data="{{ p: master[droneId[pMasterNo].masterId].uName , c:master[droneId[pMasterNo].masterId].title }}"/>
+          <view id="slaveGroup" class="weui-grids">
+            <view wx:for="{{droneId[pMasterNo].slaveId}}" wx:key="{{index}}" wx:for-item="slaveId">
+              <view class="weui-grid" hover-class="weui-grid_active" id="{{slaveId}}" bindtap="f_pickSlave">
+                <image class="weui-grid__icon" src="{{slave[slaveId].thumbnail}}" />
+                <view class="weui-grid__label">{{slave[slaveId].uName}}</view>
+              </view>
+            </view>
+          </view>
+        </view>
+      </view>
     </view>
-    <view wx:else>
-      <view wx:if="{{pMasterNo<0}}">
+    <view class="page__bd">
+      <view wx:if="{{tiringRoom}}">
+        <template is="showgrids" data="{{grids}}"/>
         <view class="page__title">经典推荐</view>
         <template is="tabPanel" data="{{ tPage: goodsIndex , pageData , pNo }}"/>
       </view>
       <view wx:else>
-        <view wx:if="{{iClicked!='0'}}">
-          <template is="tabPanel" data="{{ tPage: goodsPage[iClicked] , pageData , pNo }}"/>
+        <view wx:if="{{pMasterNo<0}}">
+          <view class="page__title">经典推荐</view>
+          <template is="tabPanel" data="{{ tPage: goodsIndex , pageData , pNo }}"/>
         </view>
         <view wx:else>
-          <view wx:for="{{droneId[pMasterNo].slaveId}}" wx:key="{{index}}" wx:for-item="sForId">
-            <view wx:if="{{goodsPage[sForId]}}">
-              <template is="s_h3" data="{{ p: slave[sForId].uName , c:slave[sForId].title }}"/>
-              <template is="tabPanel" data="{{ tPage: goodsPage[sForId] , pageData , pNo }}"/>
+          <view wx:if="{{iClicked!='0'}}">
+            <template is="tabPanel" data="{{ tPage: goodsPage[iClicked] , pageData , pNo }}"/>
+          </view>
+          <view wx:else>
+            <view wx:for="{{droneId[pMasterNo].slaveId}}" wx:key="{{index}}" wx:for-item="sForId">
+              <view wx:if="{{goodsPage[sForId]}}">
+                <template is="s_h3" data="{{ p: slave[sForId].uName , c:slave[sForId].title }}"/>
+                <template is="tabPanel" data="{{ tPage: goodsPage[sForId] , pageData , pNo }}"/>
+              </view>
             </view>
           </view>
         </view>
