--- a/inputedit/channel/channel.wxml
+++ b/inputedit/channel/channel.wxml
@@ -2,9 +2,9 @@
 <import src="../../libs/wepage.wxml" />
 <view class="page">
   <template is="p_navBar__headTab" data="{{...pw,...ht}}"/>
-  <view class="page__sub" id="model-{{pNo}}">
+  <view wx:if="{{pageName=='tabPanelToModal'}}" class="page__sub" id="model-{{pNo}}">
     <template is="p_tabPanelToModal" data="{{tPage:cPage[ht.pageCk], pageData}}"/>
     <template is="p_footBtn"/>
   </view>
-  <template is="p_modalSwitchBox" data="{{...pw,modalStatus,animationData,modalFormat,modalData:pageData[modalId],smtName:ht.modalBtn[ht.pageCk]}}"/>
+  <template is="p_modalSwitchBox" data="{{...pw,pageName,animationData,modalFormat,modalData:pageData[modalId],smtName:ht.modalBtn[ht.pageCk]}}"/>
 </view>
